--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 						What's an Arun Jose?
 					</div>
 					<div class="about-description about-anim" id="about-description">
-						Hello there.  I'm Arun Jose.<br><br>I develop, research, write, and draw.  I like making things, and I make whatever I think would be good, regardless of domain.  I sometimes go by the mononym Jozdien.  ​I think AI Alignment is the most important problem of our time, and that's what I want to spend my time working on.<br><br>I enjoy all genres of fiction when done well, but my favourites are rational fiction and meta/absurd comedy (as well as crack fanfiction, which feels appropriate closed off in brackets).<br><br>Instagram and Email are my most frequented platforms for messages, so if you have ideas, want to collaborate, or just think I'd find something interesting (I probably will - err on the side of messaging me), just send me a message with the phrase "Xavier Avial".
+						Hello there.  I'm Arun Jose.<br><br>I develop, research, write, and draw.  I like making things, and I make whatever I think would be good, regardless of domain.  I sometimes go by the mononym Jozdien.  ​I think AI Alignment is the most important problem of our time.<br><br>I enjoy all genres of fiction when done well, but my favourites are rational fiction and meta/absurd comedy (as well as crack fanfiction, which feels appropriate closed off in brackets).<br><br>Instagram and Email are my most frequented platforms for messages, so if you have ideas, want to collaborate, or just think I'd find something interesting (I probably will - err on the side of messaging me), just send me a message with the phrase "Xavier Avial".
 					</div>
 					<div class="about-buttons about-anim">
 						<div class="about-button-container">
