--- a/index.html
+++ b/index.html
@@ -865,6 +865,12 @@
 						</div>
 						<div class="blog-recommended-item-text">What Would a Utopia Look Like?</div>
 					</a>
+					<a href="blog/the-truth-is-often-comfortable/" class="blog-recommended-item-container blog-anim">
+						<div class="blog-item-image-container">
+							<div class="blog-item-image blog-recommended-2"></div>
+						</div>
+						<div class="blog-recommended-item-text">The Truth is Often Comfortbale</div>
+					</a>
 				</div>
 			</div>
 			<div class="row" id="blog-post">
@@ -873,13 +879,18 @@
 				</div>
 				<div class="blog-items blog-post-items">
 					<div class="blog-item-container blog-anim">
+						<a href="blog/the-truth-is-often-comfortable/" class="blog-item-text">The Truth is Often Comfortable</a>
+						<div class="blog-item-details">Jan 2021 &#183; 5 min read</div>
+					</div>
+					<div class="blog-divider blog-anim"></div>
+					<div class="blog-item-container blog-anim">
 						<a href="blog/what-would-a-utopia-look-like/" class="blog-item-text">What Would a Utopia Look Like?</a>
-						<div class="blog-item-details">Jan 2021 &#183; Words: 1609</div>
+						<div class="blog-item-details">Jan 2021 &#183; 8 min read</div>
 					</div>
 					<div class="blog-divider blog-anim"></div>
 					<div class="blog-item-container blog-anim">
 						<a href="blog/the-loyolite/" class="blog-item-text">The Loyolite</a>
-						<div class="blog-item-details">Jan 2020 &#183; Words: 1116</div>
+						<div class="blog-item-details">Jan 2020 &#183; 5 min read</div>
 					</div>
 					<div class="blog-divider blog-anim"></div>
 				</div>
