Linking to LessWrong

--- a/index.html
+++ b/index.html
@@ -854,25 +854,6 @@
 					<div class="title-line-right-black title-line-anim"></div>
 				</div>
 			</div>
-			<div class="row" id="blog-recommended">
-				<div class="blog-subtitle blog-anim">
-					Recommended
-				</div>
-				<div class="blog-recommended-items">
-					<a href="blog/what-would-a-utopia-look-like/" class="blog-recommended-item-container blog-anim">
-						<div class="blog-item-image-container">
-							<div class="blog-item-image blog-recommended-1"></div>
-						</div>
-						<div class="blog-recommended-item-text">What Would a Utopia Look Like?</div>
-					</a>
-					<a href="blog/the-truth-is-often-comfortable/" class="blog-recommended-item-container blog-anim">
-						<div class="blog-item-image-container">
-							<div class="blog-item-image blog-recommended-2"></div>
-						</div>
-						<div class="blog-recommended-item-text">The Truth is Often Comfortbale</div>
-					</a>
-				</div>
-			</div>
 			<div class="row" id="blog-post">
 				<div class="blog-subtitle blog-anim">
 					Posts
@@ -884,7 +865,7 @@
 					</div>
 					<div class="blog-divider blog-anim"></div>
 					<div class="blog-item-container blog-anim">
-						<a href="blog/what-would-a-utopia-look-like/" class="blog-item-text">What Would a Utopia Look Like?</a>
+						<a href="https://www.lesswrong.com/posts/9yunrXrP6M5zmWDcD/utopic-nightmares" class="blog-item-text">Utopic Nightmares</a>
 						<div class="blog-item-details">Jan 2021 &#183; 8 min read</div>
 					</div>
 					<div class="blog-divider blog-anim"></div>
