Blog links open in new tab

--- a/index.html
+++ b/index.html
@@ -865,7 +865,7 @@
 					</div>
 					<div class="blog-divider blog-anim"></div>
 					<div class="blog-item-container blog-anim">
-						<a href="https://www.lesswrong.com/posts/9yunrXrP6M5zmWDcD/utopic-nightmares" class="blog-item-text">Utopic Nightmares</a>
+						<a href="https://www.lesswrong.com/posts/9yunrXrP6M5zmWDcD/utopic-nightmares" class="blog-item-text" target="_blank">Utopic Nightmares</a>
 						<div class="blog-item-details">Jan 2021 &#183; 8 min read</div>
 					</div>
 					<div class="blog-divider blog-anim"></div>
