--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
 								<a href="https://cs.ieeekerala.org/present-officers-2021/" target="_blank">IEEE Computer Society Kerala Section, AI Group</a> &#183; Since January 2021
 							</div>
 							<div class="history-item-description" id="position-1-description">
-								<ul><li>Set up an industry collaboration with <a href="https://neuroplex.in/"> Neuroplex </a> to provide experienced training and internship opportunities.</li><li>Hosted <a href="https://github.com/Jozdien/AI-For-Dummies">workshop series</a> on Machine Learning, Deep Learning, and Friendly AI - 23 participants went on to complete projects in predictive analysis.</li><li>Hosted webinar series on Data Science and Deep Learning.</li><li>Organized AI Safety competiton, which closed with an <a href="https://www.youtube.com/watch?v=4nN8wUVZ9u0">analysis</a> of the common fallacies faced  (Check that link out, I swear it's cooler than it sounds).</li><li>Collaborated with the <a href="https://intelligence.org/">Machine Intelligence Research Institute</a> for instructional material and technical assistance.</li><li>Founded 2 Special Interest Groups for AI in IEEE Student Branches across the state.</li></ul>
+								<ul><li>I'm in charge of overseeing activities related to AI in the state.  </li><li>I've co-founded SIGs in AI in five Student Branches, helped in the conduct of their events, and maintained inter-college communication channels.  </li><li>Organized webinars for members from professionals in the field of data science.</li></ul>
 							</div>
 						</div>
 					</div>
