--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 					<li class="nav-item"> <a class="nav-link" href="#about"> About </a> </li>
 					<li class="nav-item"> <a class="nav-link" href="#work"> Work </a></li>
 					<li class="nav-item" hidden> <a class="nav-link" href="#history"> History </a></li>
-					<li class="nav-item"> <a class="nav-link" href="#art"> Art </a></li>
-					<li class="nav-item"> <a class="nav-link" href="#blog"> Blog </a></li>
+					<li class="nav-item" hidden> <a class="nav-link" href="#art"> Art </a></li>
+					<li class="nav-item"> <a class="nav-link" href="www.lesswrong.com/users/jozdien"> Blog </a></li>
 					<li class="nav-item"> <a class="nav-link" target="_blank" href="resume.pdf"> Resume </a></li>
 				</ul>
 		  </div>
@@ -690,7 +690,7 @@
 			</div>
 		</div>
 	</div>
-	<div id="blog">
+	<div id="blog" hidden>
 		<div class="container-fluid" id="blog-container">
 			<div class="row" id="title-row-head">
 				<div class="title-container">
@@ -748,7 +748,7 @@
 			</div>
 		</div>
 	</div>
-	<div id="art">
+	<div id="art" hidden>
 		<div class="container-fluid" id="art-container">
 			<div class="row" id="title-row-head">
 				<div class="title-container">
