Propagating changes to web version.

--- a/index.html
+++ b/index.html
@@ -99,15 +99,15 @@
 					<div class="landing-menu-divider" hidden>
 						/
 					</div>
-					<a href="#art">
+					<a href="#art" hidden>
 						<div class="landing-menu-item">
 							Art
 						</div>
 					</a>
-					<div class="landing-menu-divider">
+					<div class="landing-menu-divider" hidden>
 						/
 					</div>
-					<a href="#blog">
+					<a href="www.lesswrong.com/users/jozdien">
 						<div class="landing-menu-item">
 							Blog
 						</div>
