--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<li class="nav-item"> <a class="nav-link" href="#work"> Work </a></li>
 					<li class="nav-item" hidden> <a class="nav-link" href="#history"> History </a></li>
 					<li class="nav-item" hidden> <a class="nav-link" href="#art"> Art </a></li>
-					<li class="nav-item"> <a class="nav-link" href="www.lesswrong.com/users/jozdien"> Blog </a></li>
+					<li class="nav-item"> <a class="nav-link" href="https://www.lesswrong.com/users/jozdien" target="_blank"> Blog </a></li>
 					<li class="nav-item"> <a class="nav-link" target="_blank" href="resume.pdf"> Resume </a></li>
 				</ul>
 		  </div>
@@ -107,7 +107,7 @@
 					<div class="landing-menu-divider" hidden>
 						/
 					</div>
-					<a href="www.lesswrong.com/users/jozdien">
+					<a href="https://www.lesswrong.com/users/jozdien" target="_blank">
 						<div class="landing-menu-item">
 							Blog
 						</div>
